--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<img src="hero.png" alt="" />
 			</div>
 
-			<!-- <div class="content-holder">
+			<div class="content-holder">
 				<div class="row">
 					<h1>History</h1>
 				</div>
@@ -66,7 +66,7 @@
 						odio temporibus nihil?
 					</p>
 				</div>
-			</div> -->
+			</div>
 		</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
