--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<div class="content-holder">
 				<div class="row">
-					<h1>History</h1>
+					<h1>Art Library</h1>
 				</div>
 
 				<div class="row">
